force-app/main/default/objects/FLIP_Event__c/fields/Session_Content__c.field-meta.xml
<CustomField>
    <fullName>Session_Content__c</fullName>
    <label>Event Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate Exchange</fullName>
            </value>
            <value>
                <fullName>Case Study: Prioritisation</fullName>
            </value>
            <value>
                <fullName>Closing the Gap</fullName>
            </value>
            <value>
                <fullName>Coaching Part 2</fullName>
            </value>
            <value>
                <fullName>Coaching Part 3</fullName>
            </value>
            <value>
                <fullName>Constructing a Whole-school Curriculum</fullName>
            </value>
            <value>
                <fullName>Curriculum Planning in Response to National Changes</fullName>
            </value>
            <value>
                <fullName>Developing a High-Performing Team</fullName>
            </value>
            <value>
                <fullName>Developing your Impact Plan and Looking at Data</fullName>
            </value>
            <value>
                <fullName>Developing your Research Skills</fullName>
            </value>
            <value>
                <fullName>Educating and Supporting the Whole Child</fullName>
            </value>
            <value>
                <fullName>Effective Monitoring and Feedback</fullName>
            </value>
            <value>
                <fullName>Empowering your Team</fullName>
            </value>
            <value>
                <fullName>Evidence Based Practice – Effective Interventions</fullName>
            </value>
            <value>
                <fullName>Facilitation Skills Part 1</fullName>
            </value>
            <value>
                <fullName>Facilitation Skills Part 2</fullName>
            </value>
            <value>
                <fullName>Fellows ExChange</fullName>
            </value>
            <value>
                <fullName>Great Expectations</fullName>
            </value>
            <value>
                <fullName>Holding to Account</fullName>
            </value>
            <value>
                <fullName>JPD10</fullName>
            </value>
            <value>
                <fullName>JPD11</fullName>
            </value>
            <value>
                <fullName>JPD3</fullName>
            </value>
            <value>
                <fullName>JPD4</fullName>
            </value>
            <value>
                <fullName>JPD5</fullName>
            </value>
            <value>
                <fullName>JPD6</fullName>
            </value>
            <value>
                <fullName>JPD7</fullName>
            </value>
            <value>
                <fullName>JPD8</fullName>
            </value>
            <value>
                <fullName>JPD9</fullName>
            </value>
            <value>
                <fullName>Knowing Me, Leading Us</fullName>
            </value>
            <value>
                <fullName>Leading Facilitation Part 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>