force-app/main/default/objects/FLIP_Event__c/fields/Session_Hubs__c.field-meta.xml
<CustomField>
    <fullName>Session_Hubs__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Session Hubs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Birmingham 1</fullName>
            </value>
            <value>
                <fullName>Birmingham 2</fullName>
            </value>
            <value>
                <fullName>Blackburn</fullName>
            </value>
            <value>
                <fullName>Blackpool</fullName>
            </value>
            <value>
                <fullName>Bolton</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Bury St Edmunds</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Canterbury</fullName>
            </value>
            <value>
                <fullName>Coventry</fullName>
            </value>
            <value>
                <fullName>Derbyshire (Shirebrook)</fullName>
            </value>
            <value>
                <fullName>Doncaster</fullName>
            </value>
            <value>
                <fullName>Eastbourne</fullName>
            </value>
            <value>
                <fullName>East Manchester</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>East Yorkshire</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Greater Manchester</fullName>
            </value>
            <value>
                <fullName>Hull</fullName>
            </value>
            <value>
                <fullName>Humberside</fullName>
            </value>
            <value>
                <fullName>Kent</fullName>
            </value>
            <value>
                <fullName>Lancashire</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Leicester</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>London 1</fullName>
            </value>
            <value>
                <fullName>London 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>