force-app/main/default/objects/FLIP_Event__c/fields/Session_Region__c.field-meta.xml
<CustomField>
    <fullName>Session_Region__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Session Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Midlands</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>