force-app/main/default/objects/FLIP_Event__c/fields/Session_Score__c.field-meta.xml
<CustomField>
    <fullName>Session_Score__c</fullName>
    <description>Copied from the TL Event object</description>
    <label>Session Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>