force-app/main/default/objects/FLIP_Event__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <description>Copied from TL Event object.  Session Type Event_Type</description>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Catch up</fullName>
            </value>
            <value>
                <fullName>Coach Development</fullName>
            </value>
            <value>
                <fullName>Day Conference</fullName>
            </value>
            <value>
                <fullName>Day Conference session</fullName>
            </value>
            <value>
                <fullName>Elective</fullName>
            </value>
            <value>
                <fullName>Evening Seminar</fullName>
            </value>
            <value>
                <fullName>Evening Seminar - Elective(Y1)</fullName>
            </value>
            <value>
                <fullName>Evening Seminar - Elective(Y2)</fullName>
            </value>
            <value>
                <fullName>Focus Group</fullName>
            </value>
            <value>
                <fullName>Induction</fullName>
            </value>
            <value>
                <fullName>Induction session</fullName>
            </value>
            <value>
                <fullName>JPD</fullName>
            </value>
            <value>
                <fullName>Learning Set</fullName>
            </value>
            <value>
                <fullName>Learning Set Session</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>NPQML</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>PSDG</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Residential session</fullName>
            </value>
            <value>
                <fullName>SLT Training</fullName>
            </value>
            <value>
                <fullName>Specialism</fullName>
            </value>
            <value>
                <fullName>Super Saturday</fullName>
            </value>
            <value>
                <fullName>Super Saturday Learning Set</fullName>
            </value>
            <value>
                <fullName>Super Saturday Seminar</fullName>
            </value>
            <value>
                <fullName>Super Saturday session</fullName>
            </value>
            <value>
                <fullName>Super Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>