force-app/main/default/objects/FLIP_Event__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <formula>$Setup.URL__c.URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site URL</label>
    <type>Text</type>
</CustomField>