force-app/main/default/objects/FLIP_Event__c/fields/Strengths_2F__c.field-meta.xml
<CustomField>
    <fullName>Strengths_2F__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Strengths 2F</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>