force-app/main/default/objects/FLIP_Event__c/fields/Stretch_Score__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Score__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Stretch Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>