force-app/main/default/objects/FLIP_Event__c/fields/Team_Summary__c.field-meta.xml
<CustomField>
    <fullName>Team_Summary__c</fullName>
    <description>Copied from TL Event object</description>
    <label>Team Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>