force-app/main/default/objects/FLIP_Event__c/fields/TL_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>TL_Event_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL Event ID</label>
    <referenceTo>TL_Event__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>