force-app/main/default/objects/FLIP_Event__c/fields/Total_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Attended__c</fullName>
    <description>Counts the number of Attendees with the &#39;Event Attended&#39; box ticked</description>
    <label>Total Attended</label>
    <summaryFilterItems>
        <field>Attendees__c.Event_Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendees__c.FLIP_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>