force-app/main/default/objects/FLIP_Event__c/fields/Total_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendees__c</fullName>
    <formula>Total_FP_Attendee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Responded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>