force-app/main/default/objects/FLIP_Event__c/fields/Total_CP_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Total_CP_Attendee__c</fullName>
    <label>Total CP Attendee</label>
    <summaryFilterItems>
        <field>Attendees__c.AttendingEvent__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendees__c.FLIP_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>