force-app/main/default/objects/FLIP_Event__c/fields/Total_Evals_Returned__c.field-meta.xml
<CustomField>
    <fullName>Total_Evals_Returned__c</fullName>
    <label>Total Evals Returned</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>