force-app/main/default/objects/FLIP_Event__c/fields/Total_evaluations_returned__c.field-meta.xml
<CustomField>
    <fullName>Total_evaluations_returned__c</fullName>
    <label>Total evaluations returned</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>