force-app/main/default/objects/FLIP_Event__c/fields/Total_FP_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Total_FP_Attendee__c</fullName>
    <label>Total FP Attendee</label>
    <summaryFilterItems>
        <field>Attendees__c.Attending_Event__c</field>
        <operation>equals</operation>
        <value>Will attend</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendees__c.FLIP_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>