force-app/main/default/objects/FLIP_Event__c/fields/Total_FP_invitee__c.field-meta.xml
<CustomField>
    <fullName>Total_FP_invitee__c</fullName>
    <label>Total FP invitee</label>
    <summaryForeignKey>Attendees__c.FLIP_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>