force-app/main/default/objects/FLIP_Event__c/fields/Type_of_QA__c.field-meta.xml
<CustomField>
    <fullName>Type_of_QA__c</fullName>
    <label>Type of QA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Learning Walk</fullName>
            </value>
            <value>
                <fullName>Formal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>