force-app/main/default/objects/FLIP_Event__c/fields/Visit_conducted__c.field-meta.xml
<CustomField>
    <fullName>Visit_conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit conducted</label>
    <type>Checkbox</type>
</CustomField>