force-app/main/default/objects/FLIP_Event__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>FL Events</description>
    <label>Event</label>
</RecordType>