force-app/main/default/objects/FLIP_Event__c/recordTypes/TL_Event.recordType-meta.xml
<RecordType>
    <fullName>TL_Event</fullName>
    <active>true</active>
    <description>TL Event copied from the TL Event object</description>
    <label>TL Event</label>
</RecordType>