force-app/main/default/objects/FLIP_Event__c/validationRules/Applicability_Between_0_and_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Applicability_Between_0_and_100</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Applicability__c &gt; 1,Applicability__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Applicability__c</errorDisplayField>
    <errorMessage>Applicability must be between 0 to 100</errorMessage>
</ValidationRule>