force-app/main/default/objects/FLIP_Event__c/validationRules/Application_of_knowledge_100_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_of_knowledge_100_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Application_of_knowledge__c &gt; 1,Application_of_knowledge__c &lt; 0)</errorConditionFormula>
    <errorMessage>Application of Knowledge score must be 0-100</errorMessage>
</ValidationRule>