force-app/main/default/objects/FLIP_Event__c/validationRules/Logistics_10_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Logistics_10_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Logistics__c &gt; 10,Logistics__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Logistics__c</errorDisplayField>
    <errorMessage>Logistics score must be between 0 and 10</errorMessage>
</ValidationRule>