force-app/main/default/objects/FLIP_Event__c/validationRules/Mandatory_checkbox_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_checkbox_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordType.DeveloperName == &#39;TL_Event&#39;, Network__c = false,  Optional__c = false,  Mandatory__c = false)</errorConditionFormula>
    <errorDisplayField>Mandatory__c</errorDisplayField>
    <errorMessage>Please tick either Mandatory or Optional checkbox.</errorMessage>
</ValidationRule>