force-app/main/default/objects/FLIP_Event__c/validationRules/No_Optional_or_Mandatory_if_NW.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Optional_or_Mandatory_if_NW</fullName>
    <active>true</active>
    <description>AND(RecordType.DeveloperName == &#39;TL_Event&#39;,  Network__c = true,  Optional__c = true,  Mandatory__c = true)</description>
    <errorConditionFormula>AND( Network__c = true, OR( Optional__c = true,  Mandatory__c = true))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>You cannot check Mandatory or Optional if it&#39;s a Network event</errorMessage>
</ValidationRule>