force-app/main/default/objects/FLIP_Event__c/validationRules/Objectives_10_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Objectives_10_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Objectives__c &gt; 10,Objectives__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Objectives__c</errorDisplayField>
    <errorMessage>Objectives score must be between 0 and 10</errorMessage>
</ValidationRule>