force-app/main/default/objects/FLIP_Event__c/validationRules/Only_Optional_checkbox_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Optional_checkbox_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordType.DeveloperName == &#39;TL_Event&#39;, Network__c = false,  Optional__c = true,  Mandatory__c = true)</errorConditionFormula>
    <errorDisplayField>Optional__c</errorDisplayField>
    <errorMessage>Please tick either Mandatory or Optional checkbox, but not both.</errorMessage>
</ValidationRule>