force-app/main/default/objects/FLIP_Event__c/validationRules/Other_Hub.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Hub</fullName>
    <active>true</active>
    <description>Copied from TL Event object</description>
    <errorConditionFormula>IF( AND($Profile.Name!=&#39;Core Participant&#39;, $Profile.Name!=&#39;Coach&#39;,$Profile.Name!=&#39;TLOD Participant&#39;,$Profile.Name!=&#39;School Mentor&#39;),IF( INCLUDES( Session_Hubs__c ,&#39;Other&#39;),if( Other_Hub__c ==&#39;&#39;,true,false),false ),false)</errorConditionFormula>
    <errorDisplayField>Other_Hub__c</errorDisplayField>
    <errorMessage>It is mandatory to fill Other Hub if you have selected &#39;Other&#39; in Session Hubs</errorMessage>
</ValidationRule>