force-app/main/default/objects/FLIP_Event__c/validationRules/Overall_score_10_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Overall_score_10_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Overall_score__c &gt; 10,Overall_score__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Overall_score__c</errorDisplayField>
    <errorMessage>Overall score must be between 0 and 10</errorMessage>
</ValidationRule>