force-app/main/default/objects/FLIP_Event__c/validationRules/Participation_Limit_on_Event.validationRule-meta.xml
<ValidationRule>
    <fullName>Participation_Limit_on_Event</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Attendees__c &gt; Participation_Limit__c</errorConditionFormula>
    <errorMessage>This event has now reached its capacity. Please contact the event organiser if you need to add further attendees.</errorMessage>
</ValidationRule>