force-app/main/default/objects/FLIP_Event__c/validationRules/Pitch_Between_minus5_to_plus5.validationRule-meta.xml
<ValidationRule>
    <fullName>Pitch_Between_minus5_to_plus5</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Pitch__c &gt; 5,Pitch__c &lt; -5)</errorConditionFormula>
    <errorDisplayField>Pitch__c</errorDisplayField>
    <errorMessage>Pitch score must be between -5 and 5.</errorMessage>
</ValidationRule>