force-app/main/default/objects/FLIP_Event__c/validationRules/Quality_10_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Quality_10_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Quality__c &gt; 10,Quality__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Quality__c</errorDisplayField>
    <errorMessage>Quality score must be between 0 and 10</errorMessage>
</ValidationRule>