force-app/main/default/objects/FLIP_Event__c/validationRules/Recommend_a_colleague_100_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Recommend_a_colleague_100_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Recommend_a_colleague__c &gt; 1,Recommend_a_colleague__c &lt; 0)</errorConditionFormula>
    <errorMessage>Recommend a Colleague score must be 0-100</errorMessage>
</ValidationRule>