force-app/main/default/objects/FLIP_Event__c/validationRules/Relevance_of_Content_10_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Relevance_of_Content_10_max</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Relevance_of_content__c &gt; 10,Relevance_of_content__c &lt; 0)</errorConditionFormula>
    <errorMessage>Relevance of Content must be between 0 and 10</errorMessage>
</ValidationRule>