force-app/main/default/objects/FLIP_Event__c/validationRules/Rich_text_area_field_required_Learning.validationRule-meta.xml
<ValidationRule>
    <fullName>Rich_text_area_field_required_Learning</fullName>
    <active>true</active>
    <description>Learning Walk Feedback must be completed when Type of QA = Learning Walk</description>
    <errorConditionFormula>IF(
AND(
TEXT(Type_of_QA__c) = &quot;Learning Walk&quot;, 
LEN(Learning_Walk_Feedback__c) = 0), True, False)</errorConditionFormula>
    <errorDisplayField>Learning_Walk_Feedback__c</errorDisplayField>
    <errorMessage>Learning Walk Feedback must be completed when Type of QA = Learning Walk</errorMessage>
</ValidationRule>