force-app/main/default/objects/FLIP_Event__c/validationRules/Role_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_1</fullName>
    <active>true</active>
    <description>Copied from TL Event object</description>
    <errorConditionFormula>IF( AND($Profile.Name!=&#39;Core Participant&#39;, $Profile.Name!=&#39;Coach&#39;,$Profile.Name!=&#39;TLOD Participant&#39;,$Profile.Name!=&#39;School Mentor&#39;),IF(CONTAINS( TEXT(Facilitator_Group__c), &#39;1 Facilitator&#39;) 
,IF(ISNULL( TEXT(Role_1F__c) ) || TEXT(Role_1F__c)==&#39;&#39;,true,false),false 
),false)</errorConditionFormula>
    <errorDisplayField>Role_1F__c</errorDisplayField>
    <errorMessage>It is mandatory to fill Role for Facilitator 1</errorMessage>
</ValidationRule>