force-app/main/default/objects/FLIP_Event__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Event_Organiser__c</columns>
    <columns>Region__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Cohort_lkp__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Overall_score__c</columns>
    <columns>Facilitator_1__c</columns>
    <columns>Facilitator_2__c</columns>
    <columns>Programme__c</columns>
    <columns>Programme_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
</ListView>