force-app/main/default/objects/FLIP_Event__c/listViews/All_FL_Events.listView-meta.xml
<ListView>
    <fullName>All_FL_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Event_Organiser__c</columns>
    <columns>Region__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Facilitator_1__c</columns>
    <columns>Facilitator_2__c</columns>
    <columns>Role_1F__c</columns>
    <columns>Role_2F__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme__c</field>
        <operation>contains</operation>
        <value>future leaders</value>
    </filters>
    <label>All FL Events</label>
    <language>en_US</language>
</ListView>