force-app/main/default/objects/FLIP_Event__c/listViews/ALP_events.listView-meta.xml
<ListView>
    <fullName>ALP_events</fullName>
    <columns>Event_Name__c</columns>
    <columns>NAME</columns>
    <columns>Cohort_lkp__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Event_Category__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Facilitator_1__c</columns>
    <columns>Facilitator_2__c</columns>
    <columns>Programme__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme__c</field>
        <operation>contains</operation>
        <value>ALP</value>
    </filters>
    <label>ALP events</label>
</ListView>