force-app/main/default/objects/FLIP_Event__c/listViews/Cancel_Events.listView-meta.xml
<ListView>
    <fullName>Cancel_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Region__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancel Events</label>
    <language>en_US</language>
</ListView>