force-app/main/default/objects/FLIP_Event__c/listViews/Careers_Leader_20191.listView-meta.xml
<ListView>
    <fullName>Careers_Leader_20191</fullName>
    <columns>NAME</columns>
    <columns>Cohort_Name__c</columns>
    <columns>Cohort_lkp__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Overall_score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cohort_lkp__c</field>
        <operation>equals</operation>
        <value>P-00598</value>
    </filters>
    <label>Careers Leaders 2019</label>
    <language>en_US</language>
</ListView>